--- a/src/app/maps/pages/marks/marks.component.html
+++ b/src/app/maps/pages/marks/marks.component.html
@@ -1,1 +1,16 @@
-<p>marks works!</p>
+<ul class="list-group">
+  <li class="list-group-item list-group-item-info" (click)="addMarker()">
+    + Agegar
+  </li>
+  <li class="list-group-item "
+      *ngFor="let markColor of marks; let i = index"
+      (click)="goToMarker(markColor.marker!.getLngLat())"
+      (dblclick)=" deleteMarker(i) "
+      [ngStyle]="{
+        'background-color': markColor.color
+      }">
+    Marker {{i + 1}}
+  </li>
+</ul>
+
+<div #map class="map-container"></div>
